# csc8508-team-project

./: .gitignore  .gitmodules  CMakeLists.txt  Frustum.cpp  OGLTexture.cpp  checkleak.sh  cmake_install.cmake  configure-ps5.bat  configure.bat  flake.nix  readme.md  update-subtrees.sh  valgrind-suppress.supp
Assets/Levels/: level_1.json  level_3.json  level_4.json  level_5.json  level_6.json
Assets/Meshes/: Quad.msh
Assets/Meshes/Corridor_Meshes/: Corridor_Wall_Corner_In_R_Out_L.msh  Corridor_Wall_Corner_In_V2_Both.msh  Corridor_Wall_Corner_In_V2_L.msh  Corridor_Wall_Corner_In_V2_R_Corner.msh
Assets/Meshes/NavMeshes/: smalltest.navmesh  test.navmesh
Assets/Meshes/Parts_Meshes/: Security_Camera.mat  Security_Camera.msh  corridor_wall_screen.mat
Assets/Meshes/corridor_walls_and_floor/: Corridor_Wall_Corner_In_Both.msh  Corridor_Wall_Corner_In_L.msh  Corridor_Wall_Corner_In_L_Out_R.msh  Corridor_Wall_Corner_In_R.msh  Corridor_Wall_Corner_In_R_Out_L.msh  Corridor_Wall_Corner_In_V2_Both.msh  Corridor_Wall_Corner_In_V2_L.msh  Corridor_Wall_Corner_In_V2_L_Corner.msh  Corridor_Wall_Corner_In_V2_R.msh  Corridor_Wall_Corner_In_V2_R_Corner.msh  Corridor_Wall_Corner_In_V2_R_Out_L.msh  Corridor_Wall_Corner_Out_Both.msh  Corridor_Wall_Corner_Out_L.msh  Corridor_Wall_Corner_Out_R.msh  Corridor_Wall_Straight_Mid.msh  corridor_Wall_Corner_In_L_Out_R_end.msh  corridor_Wall_Corner_In_R_Out_L_end.msh  corridor_Wall_Corner_In_V2_L_Out_R.msh  corridor_Wall_Corner_In_V2_L_Out_R_end.msh  corridor_Wall_Corner_In_V2_L_end.msh  corridor_Wall_Corner_In_V2_R_Out_L_end.msh  corridor_Wall_Corner_In_V2_R_end.msh  corridor_Wall_Corner_Out_Both_end_L.msh  corridor_Wall_Corner_Out_Both_end_R.msh  corridor_Wall_Corner_Out_Both_end_both.msh  corridor_Wall_Corner_Out_L_end_L.msh  corridor_Wall_Corner_Out_L_end_R.msh  corridor_Wall_Corner_Out_L_end_both.msh  corridor_Wall_Corner_Out_R_end_L.msh  corridor_Wall_Corner_Out_R_end_R.msh  corridor_Wall_Corner_Out_R_end_both.msh  corridor_Wall_Straight_Mid_end_L.msh  corridor_Wall_Straight_Mid_end_R.msh
Assets/Shaders/: bluefrag.glsl  crosshair.vert  default.frag  default.vert  flatfrag.glsl  flatvert.glsl  orangefrag.glsl  scene.frag  scene.vert
Assets/Shaders/PSSL/: DebugLine_vv.pssl  DebugText_vv.pssl  Shadow_vv.pssl  Skybox_vv.pssl  TechObject.psslh  Tech_p.pssl  Tech_vv.pssl
Assets/Shaders/impl/: scene.frag  scene.vert
Assets/Shaders/include/: constants.glh  interop.h  vertex.glh
CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionInfo.cpp  CollisionInfo.h  CustomCollisionCallback.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  NetworkBase.h  NetworkObject.h  NetworkState.h  PhysicsObject.cpp  PhysicsObject.h  RenderObject.cpp  RenderObject.h
MeshCompiler/: CMakeLists.txt  main.cpp
NCLCoreClasses/: Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Keyboard.cpp  Keyboard.h  KeyboardMouseController.cpp  KeyboardMouseController.h  Mesh.cpp  Mesh.h  Mouse.cpp  MshLoader.cpp  MshLoader.h  SDLKeyboard.cpp  SDLKeyboard.h  SDLMouse.cpp  SDLMouse.h  SDLWindow.cpp  SDLWindow.h  Shader.cpp  Shader.h  Texture.h  TextureLoader.cpp  Vector.h  Window.cpp  Window.h
Network/: CMakeLists.txt  Client.cpp  Client.hpp  Network.hpp  NetworkTest.cpp  Packet.cpp  Packet.hpp  Server.cpp  Server.hpp  TestMain.cpp
OpenGLRendering/: CMakeLists.txt  OGLComputeShader.h  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h
PS5Core/: AGCBuffer.cpp  AGCBuffer.h  AGCMesh.cpp  AGCMesh.h  AGCRenderer.cpp  AGCRenderer.h  AGCShader.cpp  AGCShader.h  AGCTexture.cpp  AGCTexture.h  CMakeLists.txt  JoypadCamera.h  PS5Controller.cpp  PS5Controller.h  PS5MemoryAllocator.cpp  PS5MemoryAllocator.h  PS5Window.cpp  PS5Window.h
PS5Starter/: CMakeLists.txt  GameTechAGCRenderer.cpp  GameTechAGCRenderer.h  main.cpp
TeamProject/: AudioEngine.cpp  AudioEngine.h  BWHelperFunctions.cpp  BWHelperFunctions.h  BulletDebug.cpp  BulletDebug.h  BulletWorld.cpp  BulletWorld.h  CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.h  LevelImporter.cpp  LevelImporter.h  NavMesh.cpp  NavMesh.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  PlayerController.cpp  PlayerController.h  PlayerObject.h  Profiler.cpp  Profiler.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Turret.cpp  Turret.h  TutorialGame.cpp  TutorialGame.h  main.cpp
TeamProject/Render/: GameRenderer.cpp  GameRenderer.h  OpenGlBackend.cpp  OpenGlBackend.h  RenderBackend.h
